added login activity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,5 +69,6 @@
         android:backgroundTint="#09C655"
         android:textSize="25dp"
         android:height="50dp"
-        android:background="#09C655" />
+        android:background="#09C655"
+        android:onClick="loGin"/>
 </RelativeLayout>
